Add basic styling

--- a/public/popup.html
+++ b/public/popup.html
@@ -4,5 +4,11 @@
     <meta charset="UTF-8" />
     <title>Legacy Verified</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <img src="./icons/icon_48.png" alt="Legacy logo" />
+      <h1>Legacy Verified</h1>
+    </main>
+    <script src="./popup.js"></script>
+  </body>
 </html>
