Added popup to redirect to github

--- a/public/popup.html
+++ b/public/popup.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Legacy Verified</title>
+    <link rel="stylesheet" href="./popup.css" />
   </head>
   <body>
     <main>
-      <img src="./icons/icon_48.png" alt="Legacy logo" />
-      <h1>Legacy Verified</h1>
+      <a href="https://github.com/roberrrt-s/legacy-verified-extension">
+        <img src="./icons/icon_48.png" alt="Legacy logo" />
+        <h1>Legacy Verified</h1>
+      </a>
     </main>
     <script src="./popup.js"></script>
   </body>
